# bicla

./: CMakeLists.txt  CMakeSettings.json  README.md  conanfile.txt
include/bisect/: bicla.h
unit_tests/: CMakeLists.txt  parse_arguments.cpp
